--- a/app/config/config.ini
+++ b/app/config/config.ini
@@ -1,8 +1,8 @@
 [database]
 adapter  = Mysql
 host     = localhost
-username = root
-password =
+username = tuannguyen
+password = Minhtuan@123
 dbname   = invo
 charset  = utf8
 
