--- a/app/config/config.ini
+++ b/app/config/config.ini
@@ -15,3 +15,6 @@ formsDir       = app/forms/
 libraryDir     = app/library/
 baseUri        = /
 
+[session]
+adapter = Database
+table   = session_data
