--- a/app/config/config.ini
+++ b/app/config/config.ini
@@ -16,5 +16,6 @@ libraryDir     = app/library/
 baseUri        = /
 
 [session]
-adapter = Database
-table   = session_data
+adapter     = Database
+table       = session_data
+maxlifetime = 1440
